Update Web Development

--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
   
   <!-- footer -->
   <footer class="cyan white-text center">
-    <p class="flow-text">Marken Development. Copyright 2022.</p>
+    <p class="flow-text">Marken Studio. Copyright 2022.</p>
   </footer>
   
   <!--JavaScript at end of body for optimized loading-->
